# Lip_sync_pause_clearing

./: .gitignore  README.md  config.py  main_lip_correction.py  pyproject.toml
src/: app_logger.py  class_video_transform.py  utils.py  video_utils.py
tests/: test_utils.py  test_video_utils.py
